sql/log_event.cc
@@ -11352,6 +11352,7 @@ bool Rows_log_event::process_triggers(trg_event_type event,
 {
   bool result;
   DBUG_ENTER("Rows_log_event::process_triggers");
+  m_table->triggers->mark_fields_used(event);
   if (slave_run_triggers_for_rbr == SLAVE_RUN_TRIGGERS_FOR_RBR_YES)
   {
     tmp_disable_binlog(thd); /* Do not replicate the low-level changes. */
